<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ipp_tools</name>
  <version>1.0.0</version>
  <description>Library ipp_tools</description>
  <maintainer email="davidmc@unizar.es">David Morilla-Cabello</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>core_tools</depend>
  <depend>semantic_mapping</depend>
  <depend>semantic_mapping_ros</depend>
  <depend>voxblox</depend>
  <depend>voxblox_ros</depend>

</package>
